refactor: refactor the cors setting